--- a/src/components/Search.module.css
+++ b/src/components/Search.module.css
@@ -1,13 +1,14 @@
 .wrapper {
+    width: 46.125rem;
     margin-top: -1.7rem;
-    display: flex;
-
     gap: 0.5rem;
-    justify-content: center;
+
+    display: flex;
+    flex-direction: row;
 }
 
 .searchInput {
-    width: 39.87rem;
+    width: 100%;
     height: 3.375rem;
     border-radius: 8px;
     background: var(--gray-500);
@@ -23,12 +24,13 @@
 }
 
 .searchButton {
-    width: 5.625rem;
+    min-width: 5.625rem;
     height: 3.25rem;
     border-radius: 8px;
     background: var(--blue-dark);
     color: var(--gray-100);
     cursor: pointer;
+    border: 0 solid;
 
     gap: 0.4em;
 
@@ -39,4 +41,16 @@
 
 .buttonIcon {
     line-height: 0;
+}
+
+@media (max-width: 768px) {
+    .wrapper {
+        width: 25rem;
+    }
+}
+
+@media (max-width: 468px) {
+    .wrapper {
+        width: 20rem;
+    }
 }
