--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -15,22 +15,41 @@
 }
 
 .cb {
-    width: 1.3em;
-    height: 1.3em;
+    margin-right: 0.75rem;
+    width: 1.2em;
+    height: 1.2em;
     cursor: pointer;
+    outline: none;
+    appearance: none;
+    border-radius: 50%;
+    border: 2px solid var(--blue);
 }
 
 .cb:checked {
-    background: var(--blue);
+    background: var(--purple-dark);
+    border: 2px solid var(--purple-dark);
+    content: '\f0aa';
+    color: red;
 }
 
 .trashIcon {
+    width: 1.5rem;
+    height: 1.5rem;
+    margin-left: 0.75rem;
     color: var(--gray-300);
     cursor: pointer;
+    padding: 3px;
+}
+
+.trashIcon:hover {
+    background: var(--gray-400);
+    color: var(--danger);
+    border-radius: 4px;
 }
 
 .cardText {
     width: 100%;
     color: var(--gray-100);
     font-size: 0.875rem;
+    font-weight: normal;
 }
