--- a/src/components/Search.module.css
+++ b/src/components/Search.module.css
@@ -12,10 +12,18 @@
     height: 3.375rem;
     border-radius: 8px;
     background: var(--gray-500);
-    color: var(--gray-300);
     padding-left: 1rem;
-
+    color: var(--gray-100);
     border: 1px solid var(--gray-700);
+}
+
+.searchInput:focus {
+    outline: none;
+    border: 1.5px solid var(--purple-dark);
+}
+
+.searchInput::placeholder {
+    color: var(--gray-300);
 }
 
 .searchButton>span {
@@ -37,6 +45,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.searchButton:hover {
+    background: var(--blue);
 }
 
 .buttonIcon {
